--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -212,7 +212,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     # needs: [get_short_commit_hash, build_intel_mkl_avx2_linux, build_sycl_avx2_linux, build_cu121_avx2_linux, build_cu121_avx512_win, build_cu113_avx2_win]
-    needs: [get_short_commit_hash, build_intel_mkl_avx2_linux, build_sycl_avx2_linux, build_cu121_avx2_linux]
+    needs: [get_short_commit_hash, build_cu121_avx2_linux]
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
@@ -222,11 +222,7 @@ jobs:
       - name: Prepare Release
         run: |
           cd dist
-          mv -f intel-mkl-avx2-linux/* .
-          mv -f sycl-avx2-linux/* .
           mv -f cu121-avx2-linux/* .
-          mv -f cu121-avx512-win/* .
-          mv -f cu113-avx2-win/* .
           rm -rf intel-mkl-avx2-linux sycl-avx2-linux cu121-avx2-linux
       - name: Release
         uses: softprops/action-gh-release@v2
