--- a/.github/workflows/buildcpm2.6.yml
+++ b/.github/workflows/buildcpm2.6.yml
@@ -104,7 +104,7 @@ jobs:
           cuda: "12.1.1"
           method: network
       - name: Install Deps
-        run: sudo apt-get install ccache ninja-build zip -y
+        run: sudo apt-get install libgomp1 ffmpeg ccache ninja-build zip -y
       - name: Checkout
         uses: actions/checkout@v4
         with:
